--- a/package.json
+++ b/package.json
@@ -14,18 +14,12 @@
   "dependencies": {
     "compression": "^1.7.4",
     "polka": "^0.5.2",
-    "sirv": "^1.0.0",
-    "svelte": "^3.23.2"
+    "sirv": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/polyfill": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "babel-loader": "^8.1.0",
-    "html-webpack-plugin": "^4.3.0",
+    "svelte": "^3.23.2",
     "sapper": "^0.27.16",
     "svelte-loader": "^2.13.6",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.43.0"
   }
 }
